<resources>
    <string name="app_name">My Application</string>
    <string name="first_activity_running">first_activity</string>
    <string name="second_activity_running">second_activity_running</string>
    <string name="dong_y_voi_dieu_khoan">dong y voi dieu khoan</string>
    <string name="ok">ok</string>
    <string name="Yes">yes\n</string>
    <string name="no">no</string>
    <string name="click_me">click_me</string>
    <string name="male">male</string>
    <string name="home">Home</string>
    <string name="profile">profile\n</string>
    <string name="setting">setting\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">home_page</string>
    <string name="profile_page">profile page</string>
    <string name="setting_page">setting page</string>
</resources>