<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dong_y_voi_dieu_khoan"/>
    <CheckBox
        android:id="@+id/cb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yes"   />
    <CheckBox
        android:id="@+id/cb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"   />
<Button
    android:id="@+id/btn_click_me"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/click_me"
    android:clickable="false"
    android:onClick="handleClickMe"/>
    <RadioButton
        android:id="@+id/rad_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"/>

</LinearLayout>